--- a/web/styles/Home.module.css
+++ b/web/styles/Home.module.css
@@ -1,3 +1,7 @@
+.test {
+  color: red;
+}
+
 .container {
   padding: 0 2rem;
 }
@@ -61,8 +65,8 @@
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New,
+    monospace;
 }
 
 .grid {
