--- a/web/components/Navbar/Navbar.module.css
+++ b/web/components/Navbar/Navbar.module.css
@@ -1,3 +1,59 @@
-.test {
-  color: red;
+.container {
+  display: grid;
+  grid-template-columns: 207px 1fr 207px;
+  grid-template-rows: 80px;
+  gap: 3px;
+  padding: 3px;
+  background-color: #adb9ad;
+}
+
+.leftMarginContainer {
+  background-color: white;
+  grid-column: 1 / 2;
+}
+
+.middleContainer {
+  background-color: white;
+  grid-column-start: 2 / 3;
+}
+
+.rightMarginContainer {
+  background-color: white;
+  grid-column-start: 3 /4;
+}
+
+.desktopLinksContainer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+  width: 100%;
+  height: 100%;
+}
+
+.desktopLink {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.desktopLink span {
+  font-size: 24px;
+}
+
+@media only screen and (max-width: 1024px) {
+  .container {
+    grid-template-columns: 97px 1fr 97px;
+    grid-template-rows: 47px;
+  }
+
+  .desktopLinksContainer {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .container {
+    grid-template-columns: 16px 1fr 16px;
+    grid-template-rows: 57px;
+  }
 }
