--- a/web/components/Navbar/Navbar.module.css
+++ b/web/components/Navbar/Navbar.module.css
@@ -24,16 +24,18 @@
 
 .desktopLinksContainer {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr;
-  width: 100%;
   height: 100%;
+  gap: 3px;
+  background-color: #adb9ad;
 }
 
 .desktopLink {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: white;
 }
 
 .desktopLink span {
