--- a/web/components/AboutEvents/AboutEvents.module.css
+++ b/web/components/AboutEvents/AboutEvents.module.css
@@ -83,7 +83,7 @@
     background-color: white;
     grid-column: 4 / 5;
     grid-row: 1 / 3;
-    border-bottom: 3px solid white;
-    margin-bottom: -3px;
+    border-bottom: none;
+    margin-bottom: 0;
   }
 }
