--- a/web/components/Welcome/Welcome.module.css
+++ b/web/components/Welcome/Welcome.module.css
@@ -61,14 +61,89 @@
   grid-row: 3 / 4;
 }
 
+/* NOT GRID  */
+
+.headerContainerContent {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 2rem;
+}
+
+.headerContainerContent p {
+  text-align: center;
+  padding-left: 20%;
+  padding-right: 20%;
+  font-style: italic;
+  padding-top: 1rem;
+}
+.infoTextContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* padding-top: 2rem; */
+}
+.infoTextContainer p {
+  text-align: center;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
+@media only screen and (max-width: 1048px) {
+  .headerContainerContent {
+    padding-top: 0.5rem;
+  }
+  .logo {
+    min-width: 75% !important;
+  }
+  .headerContainerContent p {
+    margin: 0;
+    padding: 0 10% 0 10%;
+    font-size: 14px;
+  }
+}
 @media only screen and (max-width: 1024px) {
   .container {
     grid-template-columns: 97px 1fr 97px;
     grid-template-rows: 142px 228px 151px;
   }
-
   .desktopLinksContainer {
     display: none;
+  }
+
+  .infoTextContainer h1 {
+    font-size: 24px;
+  }
+
+  .infoTextContainer p {
+    font-size: 14px;
+  }
+}
+
+@media only screen and (max-width: 840px) {
+  .infoTextContainer p {
+    padding: 0.5rem 5% 0 5%;
+    font-size: 12px;
+    margin-top: unset;
+  }
+}
+
+@media only screen and (max-width: 580px) {
+  .headerContainerContent {
+    padding-top: 0.5rem;
+  }
+  .logo {
+    min-width: 50% !important;
+  }
+  .headerContainerContent p {
+    margin: 0;
+    padding: 0 5% 0 5%;
+    font-size: 12px;
+  }
+  .infoTextContainer h1 {
+    font-size: 18px;
   }
 }
 
