--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -1,11 +1,32 @@
+@font-face {
+  src: url("./fonts/AmericanTypewriterBold.ttf");
+  font-family: TypewriterBold;
+  font-weight: bold;
+}
+
+@font-face {
+  src: url("./fonts/SourceSerifPro-Regular.ttf");
+  font-family: SourceSerif;
+  font-weight: 200px;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-    Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+h1 {
+  font-family: TypewriterBold;
+  font-size: 48px;
+  margin: 0;
 }
 
+p {
+  font-family: SourceSerif;
+  font-size: 18px;
+}
 a {
   color: inherit;
   text-decoration: none;
