--- a/web/components/UpcomingEvents/UpcomingEvents.module.css
+++ b/web/components/UpcomingEvents/UpcomingEvents.module.css
@@ -80,3 +80,91 @@
 .mobileLeft {
   display: none;
 }
+
+@media only screen and (max-width: 1024px) {
+  .container {
+    grid-template-columns: 97px 1fr 1fr 97px;
+    grid-template-rows: 22px 48px 301px 22px;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  .container {
+    grid-template-columns: 16px 1fr 1fr 16px;
+    grid-template-rows: 24px 354px 24px 285px 24px;
+  }
+
+  .left {
+    background-color: white;
+    grid-column: 1 / 2;
+    grid-row: 1 / 5;
+    border-bottom: 3px solid white;
+    margin-bottom: -3px;
+  }
+
+  .top {
+    background-color: white;
+    grid-column: 2 / 4;
+    grid-row: 1 / 2;
+  }
+
+  .topRight {
+    background-color: #edba88;
+    grid-column: 4 / 5;
+    grid-row: 1 / 3;
+  }
+
+  .right {
+    background-color: white;
+    grid-column: 4 / 5;
+    grid-row: 3 / 5;
+    border-bottom: 3px solid white;
+    margin-bottom: -3px;
+  }
+
+  .information {
+    background-color: white;
+    grid-column: 2 / 3;
+    grid-row: 2 / 4;
+  }
+
+  .upcoming {
+    background-color: white;
+    grid-column: 3 / 4;
+    grid-row: 2 / 4;
+  }
+
+  .bottomLeft {
+    background-color: #edba88;
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+  }
+
+  .bottomRight {
+    background-color: white;
+    grid-column: 3 / 4;
+    grid-row: 4 / 5;
+  }
+
+  .mobileTopLeft {
+    display: none;
+  }
+
+  .mobileTop {
+    display: none;
+  }
+
+  .mobileTopRight {
+    background-color: white;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  }
+
+  .mobileMiddleDivider {
+    display: none;
+  }
+
+  .mobileLeft {
+    display: none;
+  }
+}
