--- a/web/components/UpcomingEvents/UpcomingEvents.module.css
+++ b/web/components/UpcomingEvents/UpcomingEvents.module.css
@@ -68,9 +68,7 @@
 }
 
 .mobileTopRight {
-  background-color: white;
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
+  display: none;
 }
 
 .mobileMiddleDivider {
@@ -97,74 +95,87 @@
   .left {
     background-color: white;
     grid-column: 1 / 2;
-    grid-row: 1 / 5;
-    border-bottom: 3px solid white;
-    margin-bottom: -3px;
+    grid-row: 2 / 3;
+    border-bottom: none;
+    margin-bottom: 0;
   }
 
   .top {
     background-color: white;
-    grid-column: 2 / 4;
+    grid-column: 3 / 4;
     grid-row: 1 / 2;
   }
 
   .topRight {
     background-color: #edba88;
     grid-column: 4 / 5;
-    grid-row: 1 / 3;
+    grid-row: 2 / 3;
   }
 
   .right {
     background-color: white;
     grid-column: 4 / 5;
-    grid-row: 3 / 5;
-    border-bottom: 3px solid white;
-    margin-bottom: -3px;
+    grid-row: 3 / 6;
+    border-bottom: none;
+    margin-bottom: 0;
   }
 
   .information {
     background-color: white;
-    grid-column: 2 / 3;
-    grid-row: 2 / 4;
+    grid-column: 2 / 4;
+    grid-row: 2 / 3;
   }
 
   .upcoming {
     background-color: white;
-    grid-column: 3 / 4;
-    grid-row: 2 / 4;
+    grid-column: 2 / 4;
+    grid-row: 4 / 5;
   }
 
   .bottomLeft {
-    background-color: #edba88;
+    background-color: #3f3f3f;
     grid-column: 2 / 3;
-    grid-row: 4 / 5;
+    grid-row: 5 / 6;
   }
 
   .bottomRight {
     background-color: white;
     grid-column: 3 / 4;
-    grid-row: 4 / 5;
+    grid-row: 5 / 6;
   }
 
   .mobileTopLeft {
-    display: none;
-  }
-
-  .mobileTop {
-    display: none;
-  }
-
-  .mobileTopRight {
+    display: block;
     background-color: white;
     grid-column: 1 / 2;
     grid-row: 1 / 2;
   }
 
+  .mobileTop {
+    display: block;
+    background-color: #3f3f3f;
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
+
+  .mobileTopRight {
+    display: block;
+    background-color: white;
+    grid-column: 4 / 5;
+    grid-row: 1 / 2;
+  }
+
   .mobileMiddleDivider {
-    display: none;
+    display: block;
+    background-color: white;
+    grid-column: 2 / 4;
+    grid-row: 3 / 4;
   }
 
   .mobileLeft {
-    display: none;
+    display: block;
+    background-color: white;
+    grid-column: 1 / 2;
+    grid-row: 3 / 6;
   }
 }
