--- a/web/components/Welcome/Welcome.module.css
+++ b/web/components/Welcome/Welcome.module.css
@@ -1,7 +1,7 @@
 .container {
   display: grid;
   grid-template-columns: 207px 1fr 207px;
-  grid-template-rows: 251px 367px 353px;
+  grid-template-rows: 251px 1fr 353px;
   gap: 3px;
   padding: 0 3px 3px 3px;
   background-color: #adb9ad;
@@ -32,6 +32,7 @@
 }
 
 .heroImgContainer {
+  display: flex; /*To get rid of weird botton-margin*/
   background-color: white;
   grid-column: 2 / 3;
   grid-row: 2 / 3;
@@ -106,7 +107,7 @@
 @media only screen and (max-width: 1024px) {
   .container {
     grid-template-columns: 97px 1fr 97px;
-    grid-template-rows: 142px 228px 151px;
+    grid-template-rows: 142px 1fr 233px;
   }
   .desktopLinksContainer {
     display: none;
@@ -136,6 +137,6 @@
 @media only screen and (max-width: 640px) {
   .container {
     grid-template-columns: 16px 1fr 16px;
-    grid-template-rows: 157px 134px 285px;
+    grid-template-rows: 157px 1fr 285px;
   }
 }
