about-event component✅

--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -1,7 +1,10 @@
 @font-face {
   src: url("./fonts/AmericanTypewriterBold.ttf");
   font-family: TypewriterBold;
-  font-weight: bold;
+}
+@font-face {
+  src: url("./fonts/AmericanTypewriterRegular.ttf");
+  font-family: TypewriterRegular;
 }
 
 @font-face {
@@ -14,8 +17,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-    Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 h1 {
   font-family: TypewriterBold;
