--- a/web/components/AboutEvents/AboutEvents.module.css
+++ b/web/components/AboutEvents/AboutEvents.module.css
@@ -1,7 +1,7 @@
 .container {
   display: grid;
   grid-template-columns: 207px 1fr 1fr 207px;
-  grid-template-rows: 48px 395px;
+  grid-template-rows: 48px 1fr;
   gap: 3px;
   padding: 0 3px 3px 3px;
   background-color: #adb9ad;
@@ -39,10 +39,32 @@
   margin-bottom: -3px;
 }
 
+/* NOT GRID */
+.textContainer {
+  font-family: TypewriterRegular;
+  font-size: 22px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 2rem 9rem 2rem 9rem;
+}
+
 @media only screen and (max-width: 1024px) {
   .container {
     grid-template-columns: 97px 1fr 1fr 97px;
     grid-template-rows: 22px 175px;
+  }
+  .textContainer {
+    padding: 0;
+    font-size: 16px;
+    padding: 0.5rem 3rem 0 3rem;
+  }
+  .textContainer h4 {
+    margin: 0;
+  }
+  .bookIcon {
+    min-height: 75% !important;
   }
 }
 
@@ -85,5 +107,11 @@
     grid-row: 1 / 3;
     border-bottom: none;
     margin-bottom: 0;
+  }
+  .textContainer {
+    font-size: 14px;
+  }
+  .bookIcon {
+    min-height: 50% !important;
   }
 }
