--- a/web/components/AuthorOfTheMonth/AuthorOfTheMonth.module.css
+++ b/web/components/AuthorOfTheMonth/AuthorOfTheMonth.module.css
@@ -1,7 +1,7 @@
 .container {
   display: grid;
   grid-template-columns: 207px 1fr 207px;
-  grid-template-rows: 91px 48px 640px 48px 334px 48px;
+  grid-template-rows: 91px 48px 1fr 48px 334px 48px;
   gap: 3px;
   padding: 0 3px 3px 3px;
   background-color: #adb9ad;
@@ -97,17 +97,45 @@
   grid-row: 6 / 7;
 }
 
+/* NOT GRID  */
+.bookImage {
+  height: 100%;
+  width: 100%;
+}
+.heading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.heading h2 {
+  font-family: TypewriterBold;
+}
+.info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 1rem 3rem 1rem 3rem;
+}
+.info h3 {
+  margin: 0;
+}
+.info p {
+  font-family: SourceSerif;
+}
+
 @media only screen and (max-width: 1024px) {
   .container {
     grid-template-columns: 97px 1fr 97px;
-    grid-template-rows: 51px 22px 386px 22px 190px 22px;
+    grid-template-rows: 51px 22px 1fr 22px 190px 22px;
   }
 }
 
 @media only screen and (max-width: 640px) {
   .container {
     grid-template-columns: 16px 1fr 1fr 16px;
-    grid-template-rows: 51px 24px 240px 24px 230px 24px;
+    grid-template-rows: 51px 24px 1fr 24px 230px 24px;
   }
 
   .topLeft {
