--- a/web/components/UpcomingEvents/UpcomingEvents.module.css
+++ b/web/components/UpcomingEvents/UpcomingEvents.module.css
@@ -1,7 +1,7 @@
 .container {
   display: grid;
   grid-template-columns: 207px 1fr 1fr 207px;
-  grid-template-rows: 48px 108px 556px 48px;
+  grid-template-rows: 48px 108px 1fr 48px;
   gap: 3px;
   padding: 0 3px 3px 3px;
   background-color: #adb9ad;
@@ -91,10 +91,12 @@
   font-family: TypewriterBold;
   font-size: 24px;
   text-align: center;
+  margin: 0;
+  padding: 1.5rem;
 }
 
 .upcomingEventsImg {
-  width: 20%;
+  width: 25%;
   position: relative;
 }
 
@@ -128,6 +130,7 @@
   width: 100%;
   position: absolute;
   object-fit: cover;
+  filter: grayscale(100%);
 }
 
 .upcomingEvents li {
@@ -140,6 +143,7 @@
   padding-right: 2rem;
   text-decoration: underline;
   font-style: italic;
+  padding-bottom: 3rem;
 }
 
 /* STYLING "INFORMATION" */
@@ -149,15 +153,17 @@
   text-align: center;
   padding: 0.5rem;
   align-items: center;
-  justify-content: center;
 }
 
 .information h2 {
   margin: 0;
-  padding: 0.5rem;
+  padding: 1rem;
+  font-family: TypewriterBold;
+  font-size: 24px;
+  text-align: center;
 }
 .information h3 {
-  font-family: TypewriterRegular;
+  font-family: TypewriterBold;
 }
 
 .information p {
@@ -168,6 +174,14 @@
   .container {
     grid-template-columns: 97px 1fr 1fr 97px;
     grid-template-rows: 22px 48px 301px 22px;
+  }
+
+  .upcomingEventsImg {
+    width: 20%;
+  }
+
+  .upcomingEventsText li:first-child {
+    font-size: 16px;
   }
 }
 
