--- a/web/components/EventsPageComponents/EventsWelcome/EventsWelcome.module.css
+++ b/web/components/EventsPageComponents/EventsWelcome/EventsWelcome.module.css
@@ -83,6 +83,8 @@
   .container {
     grid-template-columns: 97px 1fr 97px;
     grid-template-rows: 142px 228px 151px 22px;
+    gap: 2px;
+    padding: 0 2px 2px 2px;
   }
 }
 
@@ -90,5 +92,7 @@
   .container {
     grid-template-columns: 16px 1fr 16px;
     grid-template-rows: 157px 134px 266px 24px;
+    gap: 1px;
+    padding: 0 1px 1px 1px;
   }
 }
