--- a/web/components/FindUs/FindUs.module.css
+++ b/web/components/FindUs/FindUs.module.css
@@ -77,6 +77,8 @@
   .container {
     grid-template-columns: 97px 1fr 1fr 97px;
     grid-template-rows: 268px 22px;
+    gap: 2px;
+    padding: 0 2px 2px 2px;
   }
 }
 
@@ -84,6 +86,8 @@
   .container {
     grid-template-columns: 16px 1fr 1fr 16px;
     grid-template-rows: 285px 24px 268px 24px;
+    gap: 1px;
+    padding: 0 1px 1px 1px;
   }
 
   .left {
