--- a/web/components/NewsAndOffers/NewsAndOffers.module.css
+++ b/web/components/NewsAndOffers/NewsAndOffers.module.css
@@ -98,6 +98,8 @@
   .container {
     grid-template-columns: 97px 1fr 18px 1fr 97px;
     grid-template-rows: 22px 125px;
+    gap: 2px;
+    padding: 0 2px 2px 2px;
   }
 
   .news,
@@ -115,6 +117,8 @@
   .container {
     grid-template-columns: 16px 1fr 16px;
     grid-template-rows: 24px 120px 24px 99px;
+    gap: 1px;
+    padding: 0 1px 1px 1px;
   }
 
   .dividerTopMiddle {
