--- a/web/components/AboutEvents/AboutEvents.module.css
+++ b/web/components/AboutEvents/AboutEvents.module.css
@@ -54,6 +54,8 @@
   .container {
     grid-template-columns: 97px 1fr 1fr 97px;
     grid-template-rows: 22px 175px;
+    gap: 2px;
+    padding: 0 2px 2px 2px;
   }
   .textContainer {
     padding: 0;
@@ -72,6 +74,8 @@
   .container {
     grid-template-columns: 16px 1fr 1fr 16px;
     grid-template-rows: 24px 197px;
+    gap: 1px;
+    padding: 0 1px 1px 1px;
   }
 
   .dividerTopLeft {
