--- a/web/components/Navbar/Navbar.module.css
+++ b/web/components/Navbar/Navbar.module.css
@@ -46,6 +46,8 @@
   .container {
     grid-template-columns: 97px 1fr 97px;
     grid-template-rows: 47px;
+    gap: 2px;
+    padding: 0 2px 2px 2px;
   }
 
   .desktopLinksContainer {
@@ -57,5 +59,7 @@
   .container {
     grid-template-columns: 16px 1fr 16px;
     grid-template-rows: 57px;
+    gap: 1px;
+    padding: 0 1px 1px 1px;
   }
 }
