--- a/web/components/NextEvent/NextEvent.module.css
+++ b/web/components/NextEvent/NextEvent.module.css
@@ -115,6 +115,8 @@
   .container {
     grid-template-columns: 97px 1fr 18px 1fr 97px;
     grid-template-rows: 22px 216px;
+    gap: 2px;
+    padding: 0 2px 2px 2px;
   }
 
   /* NOT GRID */
@@ -141,6 +143,8 @@
   .container {
     grid-template-columns: 16px 1fr 1fr 16px;
     grid-template-rows: 24px 352px 24px 204px;
+    gap: 1px;
+    padding: 0 1px 1px 1px;
   }
 
   .top {
