--- a/web/components/ReadingTips/ReadingTips.module.css
+++ b/web/components/ReadingTips/ReadingTips.module.css
@@ -125,6 +125,8 @@
   .container {
     grid-template-columns: 97px 1fr 18px 1fr 97px;
     grid-template-rows: 37px 48px 150px 160px 22px 99px 22px;
+    gap: 2px;
+    padding: 0 2px 2px 2px;
   }
 }
 
@@ -132,6 +134,8 @@
   .container {
     grid-template-columns: 16px 1fr 1fr 16px;
     grid-template-rows: 38px 24px 317px 101px 24px 317px 101px 24px;
+    gap: 1px;
+    padding: 0 1px 1px 1px;
   }
 
   .heading {
