--- a/web/components/UpcomingEvents/UpcomingEvents.module.css
+++ b/web/components/UpcomingEvents/UpcomingEvents.module.css
@@ -181,6 +181,8 @@
   .container {
     grid-template-columns: 97px 1fr 1fr 97px;
     grid-template-rows: 22px 48px 301px 22px;
+    gap: 2px;
+    padding: 0 2px 2px 2px;
   }
 
   .upcomingEventsImg {
@@ -236,6 +238,8 @@
   .container {
     grid-template-columns: 16px 1fr 1fr 16px;
     grid-template-rows: 24px 354px 24px 1fr 24px;
+    gap: 1px;
+    padding: 0 1px 1px 1px;
   }
 
   .left {
