--- a/web/components/EventsPageComponents/EventsUpcomingEvents/EventsUpcomingEvents.module.css
+++ b/web/components/EventsPageComponents/EventsUpcomingEvents/EventsUpcomingEvents.module.css
@@ -53,6 +53,14 @@
   display: none;
 }
 
+/* NOT GRID  */
+.header {
+  font-family: TypeWriterBold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @media only screen and (max-width: 1024px) {
   .container {
     grid-template-columns: 97px 1fr 97px;
