--- a/web/components/ReadingTips/ReadingTips.module.css
+++ b/web/components/ReadingTips/ReadingTips.module.css
@@ -159,6 +159,8 @@
   .container {
     grid-template-columns: 97px 1fr 18px 1fr 97px;
     grid-template-rows: 38px 48px 1fr 160px 22px 1fr 22px;
+    gap: 2px;
+    padding: 0 2px 2px 2px;
   }
   .bookOneImg img,
   .bookTwoImg img {
@@ -171,6 +173,8 @@
   .container {
     grid-template-columns: 16px 1fr 1fr 16px;
     grid-template-rows: 38px 24px 1fr 101px 24px 317px 1 24px;
+    gap: 1px;
+    padding: 0 1px 1px 1px;
   }
 
   .heading {
