--- a/web/components/AboutPageComponents/AboutUsAbout/AboutUsAbout.module.css
+++ b/web/components/AboutPageComponents/AboutUsAbout/AboutUsAbout.module.css
@@ -1,7 +1,7 @@
 .container {
   display: grid;
   grid-template-columns: 207px 1fr 24px 1fr 207px;
-  grid-template-rows: 125px 125px 48px 298px 108px 48px;
+  grid-template-rows: 125px 125px 48px 1fr 108px 48px;
   gap: 3px;
   padding: 0 3px 3px 3px;
   background-color: #adb9ad;
@@ -79,19 +79,41 @@
   grid-row: 6 / 7;
 }
 
+/* NOT GRID  */
+.AboutUs,
+.infoOwner {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 3rem;
+}
+.AboutUs h3 {
+  margin: 0;
+}
+.infoOwner h4 {
+  margin: 0;
+  font-family: TypewriterBold;
+  font-size: 20px;
+}
+
 @media only screen and (max-width: 1024px) {
   .container {
     grid-template-columns: 97px 1fr 22px 1fr 97px;
-    grid-template-rows: 65px 65px 22px 192px 60px 22px;
+    grid-template-rows: 65px 65px 22px 1fr 60px 22px;
     gap: 2px;
     padding: 0 2px 2px 2px;
+  }
+  /* NOT GRID  */
+  .infoOwner h4 {
+    font-size: 16px;
   }
 }
 
 @media only screen and (max-width: 768px) {
   .container {
     grid-template-columns: 16px 1fr 16px;
-    grid-template-rows: 159px 286px 162px 24px;
+    grid-template-rows: 159px 1fr 162px 24px;
     gap: 1px;
     padding: 0 1px 1px 1px;
   }
@@ -160,5 +182,9 @@
     background-color: white;
     grid-column: 2 / 3;
     grid-row: 4 / 5;
+  }
+  /* NOT GRID  */
+  .infoOwner h4 {
+    font-size: 14px;
   }
 }
