--- a/web/components/AboutPageComponents/FindUsAbout/FindUsAbout.module.css
+++ b/web/components/AboutPageComponents/FindUsAbout/FindUsAbout.module.css
@@ -119,7 +119,7 @@
   }
 
   .right {
-    background-color: white;
+    background-color: #adb9ad;
     grid-column: 3 / 4;
     grid-row: 2 / 4;
   }
