--- a/web/components/AboutPageComponents/FindUsAbout/FindUsAbout.module.css
+++ b/web/components/AboutPageComponents/FindUsAbout/FindUsAbout.module.css
@@ -124,7 +124,7 @@
     grid-row: 2 / 4;
   }
 
-  .image {
+  .adress {
     background-color: white;
     grid-column: 2 / 3;
     grid-row: 2 / 3;
@@ -134,7 +134,7 @@
     display: none;
   }
 
-  .imageTwo {
+  .map {
     background-color: white;
     grid-column: 2 / 3;
     grid-row: 3 / 4;
