--- a/web/components/AboutPageComponents/AboutUsAbout/AboutUsAbout.module.css
+++ b/web/components/AboutPageComponents/AboutUsAbout/AboutUsAbout.module.css
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-columns: 207px 1fr 24px 1fr 207px;
+  grid-template-columns: clamp(140px, 12vw, 207px) 1fr 24px 1fr clamp(140px, 12vw, 207px);
   grid-template-rows: 125px 125px 48px 1fr 108px 48px;
   gap: 3px;
   padding: 0 3px 3px 3px;
