--- a/web/components/AuthorOfTheMonth/AuthorOfTheMonth.module.css
+++ b/web/components/AuthorOfTheMonth/AuthorOfTheMonth.module.css
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-columns: 207px 1fr 207px;
+  grid-template-columns: clamp(140px, 12vw, 207px) 1fr clamp(140px, 12vw, 207px);
   grid-template-rows: 91px 48px 1fr 48px 334px 48px;
   gap: 3px;
   padding: 0 3px 3px 3px;
