--- a/web/components/EventsPageComponents/EventsWelcome/EventsWelcome.module.css
+++ b/web/components/EventsPageComponents/EventsWelcome/EventsWelcome.module.css
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-columns: 207px 1fr 207px;
+  grid-template-columns: clamp(140px, 12vw, 207px) 1fr clamp(140px, 12vw, 207px);
   grid-template-rows: 237px 1fr 249px 48px;
   gap: 3px;
   padding: 0 3px 3px 3px;
