--- a/web/components/AboutEvents/AboutEvents.module.css
+++ b/web/components/AboutEvents/AboutEvents.module.css
@@ -1,6 +1,10 @@
 .container {
   display: grid;
-  grid-template-columns: clamp(140px, 12vw, 207px) 1fr 1fr clamp(140px, 12vw, 207px);
+  grid-template-columns: clamp(140px, 12vw, 207px) 1fr 1fr clamp(
+      140px,
+      12vw,
+      207px
+    );
   grid-template-rows: 48px 1fr;
   gap: 3px;
   padding: 0 3px 3px 3px;
@@ -40,6 +44,7 @@
 }
 
 /* NOT GRID */
+
 .textContainer {
   font-family: TypewriterRegular;
   font-size: 22px;
@@ -48,8 +53,13 @@
   align-items: center;
   text-align: center;
   padding: 2rem 9rem 2rem 9rem;
+  background: url(../../assets/texture.png);
+  background-size: cover;
 }
 
+.textContainer img {
+  width: 70% !important;
+}
 @media only screen and (max-width: 1024px) {
   .container {
     grid-template-columns: 97px 1fr 1fr 97px;
