--- a/web/components/AboutPageComponents/FindUsAbout/FindUsAbout.module.css
+++ b/web/components/AboutPageComponents/FindUsAbout/FindUsAbout.module.css
@@ -1,6 +1,10 @@
 .container {
   display: grid;
-  grid-template-columns: clamp(140px, 12vw, 207px) 1fr 24px 1fr clamp(140px, 12vw, 207px);
+  grid-template-columns: clamp(140px, 12vw, 207px) 1fr 24px 1fr clamp(
+      140px,
+      12vw,
+      207px
+    );
   grid-template-rows: 65px 48px 438px 48px;
   gap: 3px;
   padding: 0 3px 3px 3px;
@@ -73,6 +77,11 @@
   grid-row: 4 / 5;
 }
 
+/* NOT GRID */
+.header {
+  background: url(../../../assets/texture.png);
+  background-size: cover;
+}
 @media only screen and (max-width: 1024px) {
   .container {
     grid-template-columns: 97px 1fr 22px 1fr 97px;
