--- a/web/components/AuthorOfTheMonth/AuthorOfTheMonth.module.css
+++ b/web/components/AuthorOfTheMonth/AuthorOfTheMonth.module.css
@@ -106,10 +106,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background: url(../../assets/texture.png);
+  background-size: cover;
 }
+
 .heading h2 {
   font-family: TypewriterBold;
 }
+
 .info {
   display: flex;
   flex-direction: column;
@@ -117,6 +121,8 @@
   align-items: center;
   text-align: center;
   padding: 1rem 3rem 1rem 3rem;
+  background: url(../../assets/texture.png);
+  background-size: cover;
 }
 .info h3 {
   margin: 0;
@@ -238,5 +244,9 @@
     background-color: white;
     grid-column: 4 / 5;
     grid-row: 6 / 7;
+  }
+
+  .heading h2 {
+    font-size: 20px;
   }
 }
