--- a/web/components/EventsPageComponents/EventsEarlierEvents/EventsEarlierEvents.module.css
+++ b/web/components/EventsPageComponents/EventsEarlierEvents/EventsEarlierEvents.module.css
@@ -1,6 +1,10 @@
 .container {
   display: grid;
-  grid-template-columns: clamp(140px, 12vw, 207px) 1fr 1fr clamp(140px, 12vw, 207px);
+  grid-template-columns: clamp(140px, 12vw, 207px) 1fr 1fr clamp(
+      140px,
+      12vw,
+      207px
+    );
   grid-template-rows: 65px 1fr 24px;
   gap: 3px;
   padding: 0 3px 3px 3px;
@@ -61,6 +65,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background: url(../../../assets/texture.png);
+  background-size: cover;
 }
 .events ul {
   display: flex;
@@ -112,6 +118,8 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+  background: url(../../../assets/texture.png);
+  background-size: cover;
 }
 
 .upcomingEventsText li:first-child {
