--- a/web/components/Footer/Footer.module.css
+++ b/web/components/Footer/Footer.module.css
@@ -30,6 +30,8 @@
 .infoContainer {
   text-align: center;
   padding: 24px 0 20px 0;
+  background: url(../../assets/texture.png);
+  background-size: cover;
 }
 
 .infoContainer h4 {
