--- a/web/components/NavPopUpMenu/NavPopUpMenu.module.css
+++ b/web/components/NavPopUpMenu/NavPopUpMenu.module.css
@@ -1,11 +1,11 @@
 .menuContainer {
   position: fixed;
   width: 100%;
-  height: 500px;
   background-color: white;
   z-index: 10;
   top: 0;
   left: 0;
+  border: 2px solid #adb9ad;
 }
 
 .closeButtonContainer {
@@ -42,10 +42,33 @@
 }
 
 .menuContentContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding-bottom: 60px;
 }
 
 .pageLinkContainer {
+  width: 238px;
+}
+
+.singleLinkContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 64px;
+  border-bottom: 1px solid black;
 }
 
 .socialMediaContainer {
+  margin: 32px 0px;
+  display: flex;
+}
+
+.socialMediaContainer span {
+  width: 40px !important;
+  height: 40px !important;
+  margin: 0 12px !important;
 }
