--- a/web/components/Navbar/Navbar.module.css
+++ b/web/components/Navbar/Navbar.module.css
@@ -52,7 +52,7 @@
   display: flex;
   width: 100%;
   height: 100%;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 }
 
