--- a/web/components/Navbar/Navbar.module.css
+++ b/web/components/Navbar/Navbar.module.css
@@ -40,10 +40,8 @@
   align-items: center;
   justify-content: center;
   background-color: white;
-}
-
-.desktopLink span {
-  font-size: 24px;
+  font-size: 30px;
+  font-family: TypewriterBold;
 }
 
 /* Social-Media Links*/
