--- a/web/components/ReadingTips/ReadingTips.module.css
+++ b/web/components/ReadingTips/ReadingTips.module.css
@@ -1,11 +1,7 @@
 .container {
   display: grid;
-  grid-template-columns: clamp(140px, 12vw, 207px) 1fr 32px 1fr clamp(
-      140px,
-      12vw,
-      207px
-    );
-  grid-template-rows: 65px 48px 1fr 165px 48px 1fr 48px;
+  grid-template-columns: clamp(140px, 12vw, 207px) 1fr 32px 1fr clamp(140px, 12vw, 207px);
+  grid-template-rows: 65px 48px 1fr 165px 48px 163px 48px;
   gap: 3px;
   padding: 0 3px 3px 3px;
   background-color: #adb9ad;
@@ -126,6 +122,10 @@
 }
 
 /* NOT GRID  */
+.container h3 {
+  margin: 10px;
+}
+
 .heading {
   display: flex;
   background: url(../../assets/texture.png);
@@ -165,7 +165,7 @@
 @media only screen and (max-width: 1024px) {
   .container {
     grid-template-columns: 97px 1fr 18px 1fr 97px;
-    grid-template-rows: 38px 48px 1fr 160px 22px 1fr 22px;
+    grid-template-rows: 38px 48px 1fr 160px 22px 101px 22px;
     gap: 2px;
     padding: 0 2px 2px 2px;
   }
@@ -179,7 +179,7 @@
 @media only screen and (max-width: 768px) {
   .container {
     grid-template-columns: 16px 1fr 1fr 16px;
-    grid-template-rows: 38px 24px 1fr 101px 24px 317px 1 1;
+    grid-template-rows: 38px 24px 1fr 101px 24px 317px 101px 24px;
     gap: 1px;
     padding: 0 1px 1px 1px;
   }
