--- a/web/components/Navbar/Navbar.module.css
+++ b/web/components/Navbar/Navbar.module.css
@@ -118,13 +118,21 @@
     padding: 1px 1px 1px 1px;
   }
 
+  .middle {
+    background-color: white;
+    grid-column-start: 2 / 3;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
   .socialMediaContainer {
     display: none;
   }
 
   .mobileSocialMediaContainer {
     display: flex;
-    width: 80px;
+    width: 70px;
     height: 100%;
     justify-content: center;
     align-items: center;
@@ -138,5 +146,17 @@
 
   .hamburgerButton {
     display: none;
+  }
+
+  .mobileHamburgerButton {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 20px;
+    height: 14px;
+    margin: 0 12px 0 0;
   }
 }
