--- a/web/components/NavPopUpMenu/NavPopUpMenu.module.css
+++ b/web/components/NavPopUpMenu/NavPopUpMenu.module.css
@@ -86,6 +86,10 @@
 }
 
 @media only screen and (max-width: 768px) {
+  .container {
+    border: 1px solid #adb9ad;
+  }
+
   .closeButtonContainer {
     padding: 16px 25px;
   }
