--- a/web/components/FindUs/FindUs.module.css
+++ b/web/components/FindUs/FindUs.module.css
@@ -1,6 +1,10 @@
 .container {
   display: grid;
-  grid-template-columns: clamp(140px, 12vw, 207px) 1fr 1fr clamp(140px, 12vw, 207px);
+  grid-template-columns: clamp(140px, 12vw, 207px) 1fr 1fr clamp(
+      140px,
+      12vw,
+      207px
+    );
   grid-template-rows: 556px 48px;
   gap: 3px;
   padding: 0 3px 3px 3px;
@@ -108,6 +112,7 @@
     padding: 0 2px 2px 2px;
   }
 
+  /*NOT GRID*/
   /*NOT GRID*/
 
   .infoBox {
